--- a/Everestfcsapi/appsettings.json
+++ b/Everestfcsapi/appsettings.json
@@ -12,8 +12,8 @@
     "Subject": "JWTServiceAccessToken"
   },
   "ConnectionStrings": {
-   "DatabaseConnection": "Data Source=tcp:uttambsolutions.database.windows.net,1433;Initial Catalog=Everestfcs;User Id=uttambsolutionadmin;Password=Password123!;"
-    //"DatabaseConnection": "Data Source=DESKTOP-BR5TICR;Initial Catalog=Everestfcs;user id=sa;password=Password123!;"
+   //"DatabaseConnection": "Data Source=tcp:uttambsolutions.database.windows.net,1433;Initial Catalog=Everestfcs;User Id=uttambsolutionadmin;Password=Password123!;"
+    "DatabaseConnection": "Data Source=DESKTOP-BR5TICR;Initial Catalog=Everestfcs;user id=sa;password=Password123!;"
   },
   "AllowedHosts": "*"
 }
