--- a/Everestfcsapi/appsettings.json
+++ b/Everestfcsapi/appsettings.json
@@ -11,9 +11,9 @@
     "Audience": "JWTServicePostmanClient",
     "Subject": "JWTServiceAccessToken"
   },
-  "ConnectionStrings": {
-   //"DatabaseConnection": "Data Source=tcp:uttambsolutions.database.windows.net,1433;Initial Catalog=Everestfcs;User Id=uttambsolutionadmin;Password=Password123!;"
-    "DatabaseConnection": "Data Source=DESKTOP-BR5TICR;Initial Catalog=Everestfcs;user id=sa;password=Password123!;"
-  },
+    "ConnectionStrings": {
+        //"DatabaseConnection": "Data Source=tcp:uttambsolutions.database.windows.net,1433;Initial Catalog=Everestfcs;User Id=uttambsolutionadmin;Password=Password123!;"
+        "DatabaseConnection": "Data Source=FRANK\\SQLEXPRESS;Initial Catalog=db_aaa347_everest;user id=sa;password=Password123!;"
+    },
   "AllowedHosts": "*"
 }
