--- a/Everestfcsapi/appsettings.json
+++ b/Everestfcsapi/appsettings.json
@@ -13,7 +13,7 @@
   },
     "ConnectionStrings": {
         //"DatabaseConnection": "Data Source=tcp:uttambsolutions.database.windows.net,1433;Initial Catalog=Everestfcs;User Id=uttambsolutionadmin;Password=Password123!;"
-        "DatabaseConnection": "Data Source=FRANK\\SQLEXPRESS;Initial Catalog=db_aaa347_everest;user id=sa;password=Password123!;"
+        "DatabaseConnection": "Data Source=95.216.34.89\\MSSQLSERVER2019;Initial Catalog=tyfraiqq_everestfcsdatabase;user id=tyfraiqq_everestfcsadmin;password=zrQ21c%74;"
     },
   "AllowedHosts": "*"
 }
